package com.school.portal.domain.enums;

public enum EnrollmentStatus {
    ACTIVE,
    WITHDRAWN,
    REPEAT
}
