package com.school.portal.domain.enums;

public enum ReportCardStatus {
    DRAFT,
    APPROVED
}
